# DiskScout

./: .gitignore  BUILD.md  MakeFile  README.md  clear_cache.bat  clear_cache.sh  guide.md
gui/: CMakeLists.txt  DiskScoutGUI.pro  Makefile  Makefile.Debug  Makefile.Release  README.md  backend_interface.c  backend_interface.h  build.bat  build_minimal_qt.bat  build_qt.bat  main.cpp  mainwindow.cpp  mainwindow.h  object_script.DiskScoutGUI.Debug  object_script.DiskScoutGUI.Release  scanner_wrapper.cpp  scanner_wrapper.h  simple_gui.cpp  simple_qt_gui.cpp  simple_test.cpp  test_backend.bat  test_backend.cpp
gui/models/: filesystemmodel.cpp  filesystemmodel.h  sortproxymodel.h
gui/release/: moc_filesystemmodel.cpp  moc_mainwindow.cpp  moc_sortproxymodel.cpp  moc_sunburstwidget.cpp  moc_treemapwidget.cpp
gui/widgets/: sunburstwidget.cpp  sunburstwidget.h  treemapwidget.cpp  treemapwidget.h
src/: cache.c  cache.h  disk_assembler.asm  main.c  scanner.c  scanner.h
